# gtkdialog3

./: .gitignore  AUTHORS  CLAUDE.md  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  config.h.in  configure.in  gtkdialog.spec.in  testgui.glade
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml
debian/: changelog  control  copyright  gtkdialog3-doc.docs  gtkdialog3.install  rules
doc/: Makefile.am  gtkdialog.info  gtkdialog.texi  gtkdialog3.1
doc/reference/: button.html  checkbox.html  colorbutton.html  combobox.html  comboboxentry.html  comboboxtext.html  edit.html  entry.html  eventbox.html  expander.html  export  fontbutton.html  frame.html  hbox.html  hscale.html  hseparator.html  list.html  menu.html  menubar.html  menuitem.html  menuitemseparator.html  notebook.html  pixmap.html  progressbar.html  radiobutton.html  separator.html  spinbutton.html  statusbar.html  table.html  terminal.html  text.html  timer.html  togglebutton.html  tree.html  vbox.html  vscale.html  vseparator.html  window.html
examples/builder/: builder-entries_functions.functions  builder-entries_functions.sh  builder-entries_functions.ui  builder-toggle_buttons.ui  builder-toolbar_buttons.sh
examples/button/: button  button_action_functions  button_attributes  button_icon_actions  button_image_horizontal_alignment  button_image_position  button_image_toggle  button_signals
examples/edit/: edit  (+3 more)
for-claude/: README.md
src/: Makefile.am  actions.c  actions.h  attributes.c  attributes.h  automaton.c  automaton.h  builder_support.c  builder_support.h  gdg_debug.c  gdg_debug.h  glade_support.c  glade_support.h  gtkdialog.c  gtkdialog.h  gtkdialog_lexer.l  gtkdialog_parser.y  macros.h  printing.c  printing.h  signals.c  signals.h  stack.c  stack.h  stringman.c  stringman.h  tag_attributes.c  tag_attributes.h  variables.c  variables.h  widget_button.c  widget_button.h  widget_buttonbox.c  widget_buttonbox.h  widget_checkbox.c  widget_checkbox.h  widget_colorbutton.c  widget_colorbutton.h  widget_combobox.c  widget_combobox.h  (+60 more)
tests/: runallfunctionaltests.sh  testlib.py
(+181 files in other folders)
