# Process this file with autoconf to produce a configure script.
AC_INIT([gtkdialog3], [0.9.0], [laszlopere@gmail.com], [gtkdialog3],
	[])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

# Setting config.h macros.
AC_PATH_PROG(svnv, svnversion)
if test "x$svnv" != "x" && test `$svnv -n` != "exported"; then
	AC_DEFINE_UNQUOTED(BUILD_DETAILS, ["r`svnversion -n`"], [Build details])
else
	AC_DEFINE_UNQUOTED(BUILD_DETAILS, ["release"], [Build details])
fi
# Don't uncomment this as there's a limit on the number of file
# descriptors -- see /proc/sys/fs/inotify/max_user_instances
#AC_CHECK_HEADER([sys/inotify.h], [AC_DEFINE([HAVE_SYS_INOTIFY_H], 1,
#	[Define to 1 if you have the <sys/inotify.h> header file.])])

# Checks for programs.
AC_PROG_CC
AC_HEADER_STDC
AM_PROG_LEX
AC_PROG_YACC
AC_SUBST(YACC)

# Checks for libraries.
pkg_modules="gtk+-3.0 >= 3.0"
PKG_CHECK_MODULES(GTK, [$pkg_modules])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

AC_SUBST(GTHREAD_CFLAGS, "")
AC_SUBST(GTHREAD_LIBS, "")

vte_lib="vte-2.91 >= 0.38"
PKG_CHECK_MODULES([VTE], \
	[$vte_lib], \
	AC_SUBST(HAVE_VTE, 1),\
	AC_SUBST(HAVE_VTE, 0))
AC_SUBST(VTE_CFLAGS)
AC_SUBST(VTE_LIBS)

webkit_lib="webkit2gtk-4.1"
PKG_CHECK_MODULES([WEBKIT], \
	[$webkit_lib], \
	AC_SUBST(HAVE_WEBKIT, 1),\
	AC_SUBST(HAVE_WEBKIT, 0))
AC_SUBST(WEBKIT_CFLAGS)
AC_SUBST(WEBKIT_LIBS)

gtksourceview_lib="gtksourceview-4"
PKG_CHECK_MODULES([GTKSOURCEVIEW], \
	[$gtksourceview_lib], \
	AC_SUBST(HAVE_GTKSOURCEVIEW, 1),\
	AC_SUBST(HAVE_GTKSOURCEVIEW, 0))
AC_SUBST(GTKSOURCEVIEW_CFLAGS)
AC_SUBST(GTKSOURCEVIEW_LIBS)

# Checks for header files.
AC_CHECK_HEADERS([locale.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([setlocale])

#AC_CONFIG_FILES([])
AC_OUTPUT(
	Makefile
	gtkdialog.spec
	src/Makefile
	doc/Makefile
	data/Makefile
	data/icons/Makefile
	data/icons/hicolor/Makefile
	data/icons/hicolor/32x32/Makefile
	data/icons/hicolor/32x32/apps/Makefile
)
